2005-11-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_get_palette), (gst_ffmpeg_set_palette),
	(gst_ffmpegcsp_avpicture_fill):
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_get_unit_size), (gst_ffmpegcsp_transform):
	  Make palettes work again (see #132341). Use our own macros
	  for rounding up.

2005-11-10  Andy Wingo  <wingo@pobox.com>

	* gst/playback/gstplaybasebin.c (prepare_output): Fix format
	string doober.

2005-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_transform_caps):
	  Prefer passthrough in transform_caps

2005-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/alsa/gstalsasink.c: (gst_alsasink_open):
	  check for ALSA errors properly, instead of relying on ALSA's
	  error strings to serve to the user.

2005-11-10  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_event), (gst_ogg_demux_init),
	(gst_ogg_demux_configure_segment), (gst_ogg_demux_perform_seek),
	(gst_ogg_demux_loop), (gst_ogg_demux_change_state):
	Modernise the seek code.

2005-11-10  Michael Smith <msmith@fluendo.com>
	
	* gst/playback/gstplaybasebin.c: (group_commit), (new_decoded_pad),
	(setup_substreams), (set_active_source):
	  Unlock GROUP_LOCK in failure cases, so that we don't deadlock when
	  trying to go to NULL if we failed to read a file.

2005-11-10  Wim Taymans  <wim@fluendo.com>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audiotestsrc_class_init), (gst_audiotestsrc_get_times),
	(gst_audiotestsrc_create):
	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
	(gst_sinesrc_get_times), (gst_sinesrc_create):
	* gst/videotestsrc/gstvideotestsrc.c:
	(gst_videotestsrc_class_init), (gst_videotestsrc_get_times),
	(gst_videotestsrc_create):
	The base class can now sync for us.

2005-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>
